--- a/SOPCOVIDChecker/Views/Pesu/PesuStatus.cshtml
+++ b/SOPCOVIDChecker/Views/Pesu/PesuStatus.cshtml
@@ -41,13 +41,16 @@
 
 <script>
     var vessel = $('#pesu-status');
-    LoadList('', vessel, '@Url.Action("PesuStatusJson", "Pesu")');
+    var c = [];
+    c.push(qFix($('#searchDetail').val()));
+    LoadList(c, vessel, '@Url.Action("PesuStatusJson", "Pesu")');
 
     $(function () {
         $('#searchPatientBtn').on('click', function (event) {
             event.preventDefault();
             event.stopImmediatePropagation();
-            var q = $('#searchDetail').val();
+            var q = []
+            q.push(qFix($('#searchDetail').val()));
             LoadList(q, vessel, '@Url.Action("PesuStatusJson", "Pesu")');
         });
     })
