--- a/SOPCOVIDChecker/Views/Account/Register.cshtml
+++ b/SOPCOVIDChecker/Views/Account/Register.cshtml
@@ -12,6 +12,7 @@
     </div>
     <div class="modal-body">
         <form asp-action="Register">
+            <input hidden asp-for="Level" />
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
