--- a/SOPCOVIDChecker/Views/Admin/ResuUsers.cshtml
+++ b/SOPCOVIDChecker/Views/Admin/ResuUsers.cshtml
@@ -18,7 +18,7 @@
                             data-toggle="ajax-modal"
                             data-target="#small_modal"
                             data-action="#small_content"
-                            data-url="@Url.Action("Register","Account")">
+                            data-url="@Url.Action("Register","Account", new { level ="RESU" })">
                         <i class="fa fa-user"></i>
                         &nbsp;Add User
                     </button>
@@ -33,15 +33,18 @@
 </div>
 
 <script>
-        var vessel = $('#admin-resu');
-        LoadList('', vessel, '@Url.Action("ResuJson","Admin")');
+    var vessel = $('#admin-resu');
+    var c = [];
+    c.push(qFix($('#searchDetail').val()));
+    LoadList(c, vessel, '@Url.Action("ResuJson","Admin")');
 
-        $(function () {
-            $('#searchPatientBtn').on('click', function (event) {
-                event.preventDefault();
-                event.stopImmediatePropagation();
-                var q = $('#searchDetail').val();
-                LoadList(q, vessel, '@Url.Action("ResuJson", "Admin")');
-            });
-        })
+    $(function () {
+        $('#searchPatientBtn').on('click', function (event) {
+            event.preventDefault();
+            event.stopImmediatePropagation();
+            var q = []
+            q.push(qFix($('#searchDetail').val()));
+            LoadList(q, vessel, '@Url.Action("ResuJson", "Admin")');
+        });
+    })
 </script>
