--- a/SOPCOVIDChecker/Views/Shared/Navbar/_navbarPartialView.cshtml
+++ b/SOPCOVIDChecker/Views/Shared/Navbar/_navbarPartialView.cshtml
@@ -9,6 +9,12 @@
             </a>
         </li>
         <li class="nav-item ">
+            <a class="nav-link" asp-area="" asp-controller="Sop" asp-action="Patients">
+                <i class="fa fa-user-injured"></i>
+                &nbsp;Patients
+            </a>
+        </li>
+        <li class="nav-item ">
             <a class="nav-link" asp-area="" asp-controller="Sop" asp-action="SampleStatus">
                 <i class="far fa-file-alt"></i>
                 &nbsp;Results
@@ -96,7 +102,12 @@
                 &nbsp;Home
             </a>
         </li>
-
+        <li class="nav-item ">
+            <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="Facilities">
+                <i class="fa fa-hospital"></i>
+                &nbsp;Facilities
+            </a>
+        </li>
         <li class="nav-item dropdown">
             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-users"></i>
